# beancounters

./: .gitignore  CONTEXT.md  PLAN.md  README.md  justfile  main.beancount  pyproject.toml
.github/workflows/: import-transactions.yml
data/amex/: 2025-01.qbo  2025-02-15_to_2025-04-15.qbo  2025-02.qbo  2025-03.qbo  2025-04.qbo  2025-05.qbo  2025-06.qbo  2025-07.qbo  2025-08.qbo  2025-09.qbo  2025-10.qbo  2025-11.qbo  2025-12.qbo
data/dnb/: 2025-01.xlsx  2025-02-15_to_2025-04-15.xlsx  2025-02.xlsx  2025-03.xlsx  2025-04.xlsx  2025-05.xlsx  2025-06.xlsx  2025-07.xlsx  2025-08.xlsx  2025-09.xlsx  2025-10.xlsx  2025-11.xlsx  2025-12.xlsx
data/sparebank1/: 2025-01.csv  2025-02-15_to_2025-04-15.csv  2025-02.csv  2025-03.csv  2025-04.csv  2025-05.csv  2025-06.csv  2025-07.csv  2025-08.csv  2025-09.csv  2025-10.csv  2025-11.csv  2025-12.csv
docs/adr/: 0001-separate-split-generation.md
imports/: empty.beancount
scripts/: generate_demo_data.py  run-demo-queries.sh
src/beancounters/: __init__.py  importers.py  reimport.py  splits.py
tests/: __init__.py  conftest.py  test_demo_data.py  test_e2e_import.py  test_generate_splits.py  test_importer_config.py  test_pattern_matching.py  test_reimport.py
