[project]
name = "beancounters"
version = "0.1.0"
description = "Demo project showing how to use Norwegian Beancount importers together"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beancount>=3.0.0",
    "fava>=1.29",
    "beangulp",
    "beancount-no-amex",
    "beancount-no-dnb",
    "beancount-no-sparebank1",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "typing-extensions>=4.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
import-transactions = "beancounters.importers:main"
generate-splits = "beancounters.splits:main"
preserve-splits = "beancounters.splits:preserve_main"

[tool.uv]
package = true

[tool.uv.sources]
beangulp = { git = "https://github.com/beancount/beangulp" }
beancount-no-amex = { git = "https://github.com/staticaland/beancount-no-amex" }
beancount-no-dnb = { git = "https://github.com/staticaland/beancount-no-dnb" }
beancount-no-sparebank1 = { git = "https://github.com/staticaland/beancount-no-sparebank1" }

[tool.hatch.build.targets.wheel]
packages = ["src/beancounters"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
